# ledger

./: Cargo.toml  NOTICE  README.md  TODO.md
.github/: copilot-instructions.md
src/: lib.rs  relay.rs  stellar.rs  vault.rs
src/i18n/: english.rs  french.rs  german.rs  hungarian.rs  mod.rs  spanish.rs
src/sc/: mod.rs  proof_of_zsozso_sc.rs  vault.rs  zsozso_sc.rs
src/sc/i18n/: english.rs  french.rs  german.rs  hungarian.rs  mod.rs  spanish.rs
